# praktika

./: .gitignore  3DGrid.py  CMakeLists.txt  genSolveShow.sh
include/: common_includes.h  input.h  structures.h  u_functions.h
input/: coef.txt  grid.txt  meshh  meshh.geo  meshh.msh  nodes.txt
src/: gridGeneration.cpp  hexFEM.cpp  input.cpp  structures.cpp  u_functions.cpp
